--- a/package.json
+++ b/package.json
@@ -8,18 +8,19 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.2.0",
+    "@heroicons/vue": "^1.0.1",
     "@tailwindcss/forms": "^0.3.2",
     "@types/node": "^15.6.1",
     "autoprefixer": "^10.2.5",
     "axios": "^0.21.1",
     "dayjs": "^1.10.5",
-    "heroicons-vue3": "^1.0.1",
     "lodash": "^4.17.21",
     "postcss": "^8.2.15",
     "qs": "^6.10.1",
     "tailwindcss": "^2.1.2",
     "vue": "^3.0.5",
     "vue-router": "4",
+    "vuex": "^4.0.2",
     "yup": "^0.32.9"
   },
   "devDependencies": {
