--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.2.5",
     "axios": "^0.21.1",
     "dayjs": "^1.10.5",
+    "decimal.js": "^10.2.1",
     "lodash": "^4.17.21",
     "postcss": "^8.2.15",
     "qs": "^6.10.1",
