--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 NODE_ENV = production
-VITE_SERVER_URL = https://bag-server-production.herokuapp.com
+VITE_SERVER_URL = https://api.bag.supply
 VITE_MARKETING_URL = http://localhost:8081
