--- a/.env.staging
+++ b/.env.staging
@@ -1,3 +1,3 @@
 NODE_ENV = production
 VITE_SERVER_URL = https://bag-server-staging.herokuapp.com
-VITE_MARKETING_URL = https://bag.supply
+VITE_MARKETING_URL = http://localhost:8081
